# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Perl CloudI API destructor bug

2014-12-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix http_req C executable compilation
    * Tested with Fedora 20 on ppc64
      (configure command line arguments:
       --with-cxx-backtrace --with-zeromq --disable-javascript-support
       --disable-php-support --disable-ruby-support
       --with-integration-tests-ran=no)

2014-12-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Enforce TIMEOUT_TERMINATE_MIN based on MaxT setting during configuration
    * Add compatibility for FreeBSD 8.3 on amd64
      (relied on the default install except for extra source code
       compilation dependencies,
       ports used:
       devel/{autoconf,automake,libtool,git}
       math/gmp misc/e2fsprogs-libuuid
       configure command line arguments:
       --with-cxx-backtrace --with-zeromq --disable-javascript-support
       --disable-php-support --disable-ruby-support --disable-java-support 
       --with-integration-tests-ran=no)

2014-12-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlasticsearch
    * Fix C++ backtrace compilation configuration
    * Enable integration test compilation for the enabled programming languages
    * Split configure flag --with-integration-tests into both
      --with-integration-tests and --with-integration-tests-ran

2014-12-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlcloud and nodefinder after testing tag and security group
      selection with changes for erlcloud 0.9.1
    * Fix CloudI Service API nodes_set discovery update of parameters
    * Fix CloudI Service API nodes_get discovery ec2 output of host

2014-12-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make erlcloud use httpc instead of lhttpc to keep the errors returned
      consistent
