@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-12-11 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add the tsung_data.py script for getting exact latency extremes from
+      tsung.log files
+
 2014-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix Perl CloudI API destructor bug
